[package]
name = "rust-rpgmv-decrypt"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.28"
serde_json = "1.0.93"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
walkdir = "2.3.2"
