[package]
name = "rust-rpgmv-decrypt"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
itertools = "0.11.0"
serde_json = "1.0.93"
walkdir = "2.3.2"

[profile.release]
strip = true
lto = true
