[package]
name = "librpgmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", optional = true }
rusb = "0.9.3"
serde_json = "1.0.107"
walkdir = "2.4.0"

[features]
clap = ["dep:clap"]

[dev-dependencies]
sha2 = "0.10.8"
tempdir = "0.3.7"
