[package]
name = "rrd"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
itertools = "0.11.0"
librpgmaker = { path = "../librpgmaker", features = ["clap"] }

[profile.release]
lto = true
strip = true
