[package]
name = "rrd"
version = "2.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
clap = { version = "4.4.5", features = ["derive"] }
hex = "0.4.3"
itertools = "0.11.0"
librpgmaker = { path = "../librpgmaker" }
rand = "0.8.5"
rayon = "1.9.0"
